@@ -337,7 +337,7 @@ public final class ReflectUtil {
 
     /**
      * Checks if {@code Class cls} is a VM-anonymous class
-     * as defined by {@link sun.misc.Unsafe#defineAnonymousClass}
+     * as defined by {@link jdk.internal.misc.Unsafe#defineAnonymousClass}
      * (not to be confused with a Java Language anonymous inner class).
      */
     public static boolean isVMAnonymousClass(Class<?> cls) {
